fixed overflow element

--- a/styles/style.css
+++ b/styles/style.css
@@ -222,6 +222,7 @@ section {
     margin: 20px 0px;
     color: var(--paracolor);
     line-height: 30px;
+    padding: 5px;
 
 }
 .image-2{
@@ -288,6 +289,14 @@ section {
 .slide img{
     width: 100%;
     height: 100%;
+}
+
+@media screen and (max-width: 645px) {
+
+    .slide-track{
+        width: calc(50vw * 18);
+
+    }
 }
 
 @keyframes scroll {
